bunch of new features lol